--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.0",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "bootstrap": "^5.1.0",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
+    "next": "^11.1.1-canary.8",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "17.0.2",
+    "sass": "^1.37.5",
+    "webpack": "^4.46.0",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "eslint": "7.32.0",
