--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^5.1.0",
+    "formik": "^2.2.9",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
     "next": "^11.1.1-canary.8",
@@ -23,7 +24,8 @@
     "react-dom": "17.0.2",
     "sass": "^1.37.5",
     "webpack": "^4.46.0",
-    "yarn": "^1.22.11"
+    "yarn": "^1.22.11",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
