--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.16.13",
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
     "less": "^4.1.1",
