--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -23,7 +24,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
     "sass": "^1.37.5",
+    "slick-carousel": "^1.8.1",
     "webpack": "^4.46.0",
     "yarn": "^1.22.11",
     "yup": "^0.32.9"
