--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
@@ -17,6 +18,7 @@
     "antd": "^4.16.13",
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
     "next": "^11.1.1-canary.8",
@@ -24,7 +26,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.1",
     "sass": "^1.37.5",
     "slick-carousel": "^1.8.1",
     "webpack": "^4.46.0",
