--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
+    "react-floating-action-button": "^1.0.5",
     "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
