--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^11.1.1-canary.8",
     "next-images": "^1.8.1",
     "react": "17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
