working on audio

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "next": "^11.1.1-canary.8",
     "next-images": "^1.8.1",
     "react": "17.0.2",
-    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
+    "react-h5-audio-player": "^3.8.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
