--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/image": "^2.6.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
@@ -24,6 +27,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
+    "react-editor-js": "^2.0.6",
     "react-h5-audio-player": "^3.8.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.5",
