--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/editorjs": "2.19.1",
     "@editorjs/paragraph": "^2.8.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@svgr/webpack": "^5.5.0",
@@ -42,6 +42,7 @@
     "@editorjs/delimiter": "^1.2.0",
     "@editorjs/image": "^2.6.2",
     "@editorjs/link": "^2.4.0",
+    "@editorjs/simple-image": "^1.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
   }
