--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "devDependencies": {
     "@editorjs/code": "^2.7.0",
     "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.2",
     "@editorjs/image": "^2.6.2",
     "@editorjs/link": "^2.4.0",
     "@editorjs/simple-image": "^1.4.1",
