--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
     "next": "^11.1.1-canary.8",
     "next-images": "^1.8.1",
     "react": "17.0.2",
