--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.0",
+    "codex-tooltip": "^1.0.4",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
@@ -28,6 +29,7 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
     "react-editor-js": "^2.0.6",
+    "react-geosuggest": "^2.14.1",
     "react-h5-audio-player": "^3.8.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.5",
