--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-editor-js": "^2.0.6",
     "react-geosuggest": "^2.14.1",
     "react-h5-audio-player": "^3.8.1",
+    "react-otp-input": "^2.4.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
