--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
-    "next": "^11.1.1-canary.8",
+    "next": "^12.1.0",
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
